@startuml mutation
class Survey {
  +name
  +pageSets
  +pages
  +items
  +workflows
  +crossRules
  +update(kwargs: Partial<Survey>)
}

class MutableSurvey <<(C, HotPink) Proxy>> {
  +value
  +name
  +pageSets
  +pages
  +items
  +workflows
  +crossRules
  +update(kwargs: Partial<Survey>)
  +updateItem(page, index, item: Partial<PageItem>)
  +insertItem(page, index, item: PageItem)
}

left to right direction
MutableSurvey::value *---> Survey : value
MutableSurvey ...|> Survey
@enduml

@startuml proxy
class Survey {
  +name
  +pageSets
  +pages
  +items
  +workflows
  +crossRules
  +update()
}

class MutableSurvey <<(C, HotPink) Proxy>> {
  +value
  +name
  +pageSets
  +pages
  +items
  +workflows
  +crossRules
  +update()
  +updateItem()
  +insertItem()
}

left to right direction
MutableSurvey::name ..> Survey::name
MutableSurvey::pageSets ..> Survey::pageSets
MutableSurvey::pages ..> Survey::pages
MutableSurvey::items ..> Survey::items
MutableSurvey::workflows ..> Survey::workflows
MutableSurvey::crossRules ..> Survey::crossRules
MutableSurvey::update ..> Survey::update
MutableSurvey::update .[dotted].> MutableSurvey::value
MutableSurvey::updateItem .[dotted].> MutableSurvey::value
MutableSurvey::insertItem .[dotted].> MutableSurvey::value
@enduml